*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.20 ===
* Implemented separate input and output signal spectrum analysis.
* Implemented automatic scale of spectrum graph switch.
* Updated zoom fader.

=== 1.0.19 ===
* Updated build scripts and dependencies.

=== 1.0.18 ===
* Updated build scripts and dependencies.

=== 1.0.17 ===
* Updated build scripts and dependencies.

=== 1.0.16 ===
* Updated build scripts and dependencies.

=== 1.0.15 ===
* Updated build scripts and dependencies.

=== 1.0.14 ===
* Updated build scripts and dependencies.

=== 1.0.13 ===
* Added frequency display and gain for each filter.
* Updated build scripts and dependencies.

=== 1.0.12 ===
* Updated build scripts and dependencies.

=== 1.0.11 ===
* Fixed invalid version number in metadata.

=== 1.0.10 ===
* Updated build scripts and dependencies.

=== 1.0.9 ===
* Updated build scripts and dependencies.

=== 1.0.8 ===
* Updated build scripts and dependencies.

=== 1.0.7 ===
* Updated build scripts and dependencies.

=== 1.0.6 ===
* Added german translations (contributed by Johannes Guenther).
* Updated build scripts and dependencies.

=== 1.0.5 ===
* Updated build scripts and dependencies.

=== 1.0.4 ===
* Updated dependencies and build scripts.

=== 1.0.3 ===
* Initial release.
