@@ -15,7 +15,7 @@
 		"bands_s_0:15": "Полосы 0-15 (сторона)",
 		"bands_s_16:31": "Полосы 16-31 (сторона)",
 		
-		"filter_info" : "{@filter}\n{@frequency} Гц\n{@gain} дБ",		
+		"filter_info" : "{@filter}\n{@frequency%.2f} Гц\n{@gain%.2f} дБ",		
 		
 		"slope": {
 			"bt48": "БП48",
